--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -10,8 +10,8 @@
 } */
 
 .form{
-    grid-column-start: 1;
-    grid-column-end: 10;
+    grid-column-start: 2;
+    grid-column-end: 7;
 }
 
 .stickers{
@@ -28,6 +28,7 @@
     width: 40px;
     border-radius: 50%;
     cursor: pointer;
+    margin: auto;
 }
 
 
@@ -146,54 +147,39 @@
     grid-column-end: 10;
     grid-row-start: auto;
     grid-row-end: auto;
-    /* background-color: mediumblue; */
     height: auto;
-    /* display: inline-block; */
     display: grid;
     grid-template-columns: 50% 50%;
-
-    /* display: inline-block; */
+    margin-top: 30px;
 }
+
 
 #video_id{
     position: relative;
-    /* display: grid; */
-    /* grid-template-columns: auto;
-    grid-template-rows: auto 50px; */
     grid-column-start: 1;
     grid-column-end: 2;
-    /* grid-row-start: 2; */
-    justify-self: center;
-    /* background-color: magenta; */
-    /* width: auto; */
-
+    margin: auto;
+    width: auto;
+    overflow-y: hidden;
 }
-
 #canva_id{
     position: relative;
-    grid-column-end: -1;
     grid-column-start: 2;
-    justify-self: center;
-    /* width: auto; */
-}
-
-#canva_id, #video_id{
-    display: table-cell;
-    /* width: auto;
-    height: auto; */
-    margin: auto;
-}
-
-#canva, #video {
-    display: table-cell;
-    box-shadow: 0px 0px 10px var(--shadow);
-    border-radius: 5px;
-    padding: 0%;
+    grid-column-end: -1;
+    width: auto;
     margin: auto;
 }
 
 #video{
-    justify-self: center;
+    width: 95% !important;
+    height: 100% !important;
+    margin: auto;
+}
+
+#canva{
+    width: 95%;
+    height: 100%;
+    margin: auto;
 }
 
 .btnup::before{content: "\f093";}
@@ -207,11 +193,23 @@
     grid-row-end: 2;
     justify-self: center;
     display: none ;
+    margin-left: auto;
+    margin-right: auto;
+    top: -62px;
+    margin-bottom: -50px;
+}
+
+.btncaptuerIn{
+    transform: translateY(80%);
+    transition: all 0.5s;
+}
+.btncaptuerIn:hover{
+    transform: translateY(0%);
 }
 
 
 .hiddenBtn{
-    /* display: none !important; */
+    display: none !important;
 }
 
 
@@ -252,11 +250,22 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+    .stickers{
+        height: 60px;
+    }
 
+    .stickers img{
+        width: 50px;
+        height: 50px;
+    }
 }
 /* @media only screen and (min-width: 600px) and (max-width: 768px) */
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen  and (max-width: 768px) {
+    .form{
+        grid-column-start: 1;
+        grid-column-end: -1;
+    }
     .stickers{
         grid-column-start: 1;
         grid-column-end: 11;
@@ -271,34 +280,24 @@
         grid-column-end: 8;
     }
 
-    /* .resolution{
-        grid-column-start: 9;
-        grid-column-end: 10;
-        justify-self: start;
-    } */
+    .btncaptuer{display: none;}
+
+
     #video_id{
         grid-column-start: 1;
         grid-column-end: 3;
         margin: 0%;
         width: auto;
-        /* padding: 0%; */
-        /* width: 100%;
-        height: 360px; */
-        background-color:green;
     }
     #canva_id{
+        margin-top: 10px;
         grid-column-start: 1;
         grid-column-end: 3;
-        
-        /* width: auto;
-        height: auto; */
     }
 
     #video{
-        
         width: 100% !important;
         height: 100% !important;
-        /* margin: 0% !important; */
     }
 
     #canva{
@@ -308,10 +307,6 @@
 
     .btncaptuerIn{
         display: block;
-        margin-left: auto;
-        margin-right: auto;
-        top: -62px;
-        margin-bottom: -50px;
     }
 
     .btncaptuer{
@@ -325,7 +320,6 @@
     .buttomBtn .rightBtn{
         justify-self: center;
         margin: auto;
-        /* display: none; */
     }
 }
 
@@ -337,6 +331,40 @@
     .stickers{
         grid-column-start: 1;
         grid-column-end: 11;
+    }
+
+    .form{
+        grid-column-start: 2;
+        grid-column-end: 9;
+    }
+
+    .out-form{
+        grid-column-start: 2;
+        grid-column-end: 3;
+    }
+
+    #video_id{
+        grid-column-start: 1;
+        grid-column-end: -1;
+        justify-self: center;
+    }
+
+    #video{
+        margin-bottom: -5px;
+    }
+
+    #canva_id{
+        margin-top: 10px;
+        grid-column-start: 1;
+        grid-column-end: -1;
+        justify-self: center;
+    }
+    .btncaptuerIn{
+        display: block;
+    }
+
+    .btncaptuer{
+        display: none;
     }
 
 
@@ -355,4 +383,14 @@
     body{
         background-color: cornflowerblue;
     }
+
+    .contener_camera{
+        grid-column-start: 2;
+        grid-column-end: 10;
+    }
+
+
+
+
+
 }
