--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -157,3 +157,59 @@
 .PasswdMed{color: yellow;}
 
 .PasswdGood{color: var(--Success);}
+
+
+.buttomBtn {
+    height: 52px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
+    grid-column-start: 2;
+    grid-column-end: 10;
+    background-color: lightblue;
+  }
+
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .form{
+        background-color: indigo;
+    }
+}
+/* @media only screen and (min-width: 600px) and (max-width: 768px) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen  and (max-width: 768px) {
+    .form , .buttomBtn{
+        background-color: khaki;
+        grid-column-start: 1;
+        grid-column-end: -1;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .form{
+      background-color: gold;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200) {
+  .form{
+      background-color: coral;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .form, .buttomBtn{
+      background-color: cornflowerblue;
+      grid-column-start: 3;
+      grid-column-end: 9;
+  }
+
+
+}
