--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -81,17 +81,26 @@
 }
 
 .modal{
-  top: 80px;
   border-radius: 20px;
   width: 0px;
   height: 0px;
-  margin-left: calc(50% - 300px);
-  margin-right: calc(50% - 300px);
   position: absolute;
   background-color: rgba(255,255,255,0.8);
-  transition: all 0.5s
-
+  transition: all 0.5s;
+  display: grid;
+  grid-template-columns: 100px auto 100px;
+  grid-template-rows: 65px auto 65px;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  justify-self: center;
   }
+
+.modal img, .modal .Btn{
+display: none;
+}
 
 .modal-show{
   width: 600px;
@@ -99,37 +108,56 @@
   box-shadow: 0px 0px 20px var(--shadow);
 }
 
-.btn-1{left: 20px;}
-.btn-2{right: calc(50% - 70px);}
-.cancel{right: 20px; top: 20px;}
-.ok{right: 20px;}
-
-.modal img{
-  display: none;
+.btn-1{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
 }
-
-.modal-show .Btn{
-  display: block !important;
+.btn-2{
+  grid-row-start: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  justify-self: center;
+  margin-bottom: 0%;
+}
+.cancel{
+  grid-column-start: 3;
+  justify-self: end;
+}
+.ok{
+  grid-row-start: 3;
+  justify-self: end;
 }
 
 .modal-show img{
   display: block;
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   outline: none;
   border-radius: 20px;
-  margin-left: 20px;
-  margin-top: 15px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
+
+
+
+.modal-show .Btn{
+  display: block !important;
+  margin-bottom: 0%;
+  bottom: -5px;
+}
+
+
 
 .btn-1::before{content: "\f093";}
 .btn-2::before{content: "\f030";}
 .cancel::before{content: "\f00d";}
 
-.Btn{
-  display: none !important;
-  bottom: 20px;
-}
+/* .Btn{
+  display: none;
+} */
 
 .select{
   text-align-last:center;
@@ -142,16 +170,18 @@
 .msj_new_av{
   text-align: center;
   color: var(--ColorSCfont);
+  grid-column-start: 1;
+  grid-column-end: 4;
+  justify-self: center;
 }
 
 .delete {
-  margin-top: 50px;
-  margin-bottom: 200px;
-  left: 50%;
+  grid-column-start: 4;
+  grid-column-end: 8;
+  justify-self: center;
 }
 .delete p{
   color: var(--ColorSCfont);
-  /* background-color: chartreuse; */
   width: 100px;
   display: block;
   margin-left: auto;
@@ -162,29 +192,68 @@
   color: var(--Error);
 }
 
+@media only screen and (max-width: 600px) {
 
-@media only screen and (max-width: 600px){
-  .modal-show{
+  body{
+    /* background-color: green; */
+  }
+
+}
+/* @media only screen and (min-width: 600px) and (max-width: 768px) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen  and (max-width: 768px) {
+  body{
+    /* background-color: hotpink; */
+  }
+
+  .modal{
     width: 100%;
-    height: 500px;
-    margin: 0%;
   }
 
-  .modal-show img {
-    margin-top: 19%;
-    margin-left: 19%;
-    /* border: deeppink dashed 1px; */
-    height: 62%;
-    width: 62%;
+  .btn-1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
   }
-
-  .btn-1{left: 20px;}
-  .btn-2{right: 20px;}
+  .btn-2{
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    justify-self: start;
+  }
+  .cancel{
+    grid-column-start: 3;
+    grid-row-start: 1;
+    justify-self: end;
+    margin: 0% !important;
+  }
   .ok{
-    top: 20px;
-    left: 20px;
+    grid-row-start: 3;
+    grid-column-start: 3;
+    justify-self: end;
+    margin: 0% !important;
   }
-  .conten_img::after {
-    left: 20%;
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  body{
+      /* background-color: gold; */
   }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1200) {
+  body{
+      /* background-color: coral; */
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body{
+      /* background-color: cornflowerblue; */
+  }
+
 }
