save after change (let => var)
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/delet_account.css
+++ b/app/view/css/delet_account.css
@@ -55,21 +55,21 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   body{
-      background-color: gold;
+      /* background-color: gold; */
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1200) {
   body{
-      background-color: coral;
+      /* background-color: coral; */
   }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   body{
-      background-color: cornflowerblue;
+      /* background-color: cornflowerblue; */
   }
 
 }
