--- a/app/view/css/btns.css
+++ b/app/view/css/btns.css
@@ -12,16 +12,19 @@
   cursor: pointer;
   font-weight: bold;
   outline: none;
-  padding: 1rem 50px;
+  padding: 0%;
+  text-align: center;
+  width: 160px;
+  height: 35px;
   transition: all 0.3s;
-  height: 25px;
-  width: 40px;
+  padding-top: 20px;
+  bottom: -20px !important;
   background-color: var(--Button);
   overflow: hidden;
   box-shadow: 0px 0px 20px var(--shadow);
-  display: block;
+  /* display: block; */
   position: relative;
-  /* position: absolute; */
+  top: 0%;
   margin: 0%;
 }
 .Btn::before{
@@ -47,9 +50,8 @@
   width: 30%;
   text-decoration: none;
   text-align: center;
-  height: 100%;
-  min-width: 150px;
-  max-width: 300px;
+  width: 160px;
+  height: 55px;
 }
 
 .button:hover{background: var(--ButtonActive);}
@@ -68,6 +70,7 @@
   position: relative;
   justify-self: center !important;
   grid-column-start: 1;
+  /* -ms-grid-column: 1; */
   grid-column-end: 2;
 }
 
