--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -326,7 +326,7 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     body{
-        background-color: gold;
+        /* background-color: gold; */
     }
     .stickers{
         grid-column-start: 1;
@@ -374,14 +374,14 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1200) {
     body{
-        background-color: coral;
+        /* background-color: coral; */
     }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     body{
-        background-color: cornflowerblue;
+        /* background-color: cornflowerblue; */
     }
 
     .contener_camera{
