--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -1,6 +1,6 @@
 /* @import "Colors.css"; */
 
-
+/* autoprefixer({ grid: 'autoplace' }) */
 .contener_select_profile{
   position: fixed;
   width: 100%;
@@ -82,29 +82,36 @@
 
 .modal{
   border-radius: 20px;
-  width: 0px;
+  width: 600px;
   height: 0px;
-  position: absolute;
+  position: relative;
   background-color: rgba(255,255,255,0.8);
-  transition: all 0.5s;
+  transition: all 0.6s;
   display: grid;
   grid-template-columns: 100px auto 100px;
   grid-template-rows: 65px auto 65px;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  grid-column-start: 1;
+  grid-column-end: -1;
   grid-row-start: 1;
   justify-self: center;
-  }
+  /* margin: auto; */
+}
+
+.modal img {
+  transform: translateY(-100%);
+}
 
 .modal img, .modal .Btn{
 display: none;
+/* height: 0px; */
+
 }
 
 .modal-show{
-  width: 600px;
-  height: 500px;
+  overflow: hidden;
+  /* width: 600px; */
+
+  height: 600px;
   box-shadow: 0px 0px 20px var(--shadow);
 }
 
@@ -118,7 +125,7 @@ display: none;
   grid-column-start: 2;
   grid-column-end: 3;
   justify-self: center;
-  margin-bottom: 0%;
+  /* margin-bottom: 0%; */
 }
 .cancel{
   grid-column-start: 3;
@@ -130,15 +137,21 @@ display: none;
 }
 
 .modal-show img{
+  /* transition: all 0.8s; */
+  transform: translateY(0%);
   display: block;
   width: 100%;
-  height: 100%;
+  height: 450px;
+  /* max-height: 100%; */
+  /* background-size: cover;
+  background-position: center; */
+  /* max-width: 100%; */
   outline: none;
   border-radius: 20px;
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: -2 !important;
 }
 
 
@@ -146,7 +159,8 @@ display: none;
 .modal-show .Btn{
   display: block !important;
   margin-bottom: 0%;
-  bottom: -5px;
+  margin-top: 5px;
+  /* bottom: -5px; */
 }
 
 
@@ -182,7 +196,7 @@ display: none;
 }
 .delete p{
   color: var(--ColorSCfont);
-  width: 100px;
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -208,6 +222,13 @@ display: none;
 
   .modal{
     width: 100%;
+  }
+
+  .modal-show img{
+    grid-column-start: 1;
+    grid-column-end: -1;
+    width: calc(100% - 10px);
+    justify-self: center;
   }
 
   .btn-1{
