--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -5,20 +5,9 @@
 
 html, body {
     background: var(--bgColor);
-    /* padding: 0%; */
     margin: auto;
-    /* background-attachment: fixed; */
     overflow: auto;
     overflow-x: hidden;
-    /* min-height: 650px; */
-}
-
-body {
-    display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    -ms-grid-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    grid-template-rows: auto;
-    -ms-grid-rows: auto;
 }
 
 
@@ -40,16 +29,6 @@ body {
     margin-top: auto;
     overflow: hidden;
     padding-top: 1rem;
-    grid-column-start: 1;
-    -ms-grid-column: 1;
-    grid-column-end: 11;
-    /* -ms-g */
-    grid-row-start: 2;
-    grid-row-end: auto;
-    display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    -ms-grid-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    grid-template-rows: auto;
     margin-bottom: 40px;
     
 }
@@ -62,14 +41,7 @@ body {
     box-shadow: 0px 0px 20px var(--shadow);
     z-index: 4;
     transition: all 0.5s;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto;
-    grid-column-start: 1;
-    grid-column-end: 11;
-    grid-row-start: 1;
-    grid-row-end: 2;
-
+    display: inline-block;
 }
 
 .navBar h1{
@@ -84,40 +56,38 @@ body {
 
 .navBar a{
     text-decoration: none;
+    /* -moz-text-decoration-line: none; */
     color: var(--ColorMainFont);
 }
 
 .navBar a:focus{
     outline-style: none;
+    /* -moz-text-decoration-line: none; */
     color: var(--Colorfont);
 }
 
 .navLeft{
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 1;
     margin-left: 10px;
 }
 
 .navCenter{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 1;
     margin: auto;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+.navCenter p{
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
 .navRight{
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    justify-self: end;
     padding: 0%;
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 10px !important;
+    display: inline;
 }
 
 .footer{
@@ -127,7 +97,6 @@ body {
     width: 100%;
     background-color: var(--headerColor);
     box-shadow: 0px 0px 20px var(--shadow);
-    /* margin-top: 40px; */
 }
 
 .footer p{
