--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -9,18 +9,21 @@
     position: relative;
 } */
 
-.form{
+/* .form{
     grid-column-start: 2;
     grid-column-end: 7;
-}
+} */
 
 .stickers{
     height: 55px;
     box-shadow: 0px 0px 10px var(--shadow);
     border-radius: 5px;
+    
+    /* margin-left: 10px; */
+    margin: auto;
     margin-top: 20px;
-    grid-column-start: 2;
-    grid-column-end: 10;
+    overflow-x: auto;
+    padding: 0%;
 }
 
 .stickers img {
@@ -28,7 +31,8 @@
     width: 40px;
     border-radius: 50%;
     cursor: pointer;
-    margin: auto;
+    /* margin: auto !important; */
+    /* padding: 0px; */
 }
 
 
@@ -79,42 +83,36 @@
     font-size: 12px;
 }
 
+.container-controls{
+    margin-top: 20px;
+    /* margin: auto; */
+    height: 50px;
+    padding: 0%;
+}
+
 .control-camera {
-    grid-column-start: 2;
+    /* height: 100%; */
+    /* margin: auto; */
+    /* grid-column-start: 2;
     grid-column-end: 2;
-    justify-self: start;
+    justify-self: start; */
 }
 
 .control-stickers {
-    grid-column-start: 4;
+    /* grid-column-start: 4;
     grid-column-end: 4;
-    justify-self: center;
+    justify-self: center; */
 }
 
 .control-camera , .control-stickers{
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    height: 100%;
+    /* width: 100%; */
+    /* margin-top: 20px; */
+    /* margin-bottom: 20px; */
 }
 .control-camera .control, .control-stickers .control{
-    width: 100px;
-    height: 40px;
-}
-
-.resolution{
-    margin-top: 20px;
-    margin-bottom: 0%;
-    grid-column-start: 6;
-    grid-column-end: 6;
-    height: 35px;
-    background: none;
-    box-shadow: 0px 0px 10px var(--shadow);
-    border-radius: 15px;
-    outline: none;
-    font-weight: bold;
-    justify-self: end;
-    width: 100px;
-    background-color: dodgerblue;
+    /* width: 100px;
+    height: 40px; */
 }
 
 
@@ -125,11 +123,16 @@
 
 
 .contener_camera{
-    grid-column-start: 1;
+    background-color: brown;
+    /* justify-content: center; */
+    /* justify-content: center; */
+    /* justify-content: space-around !important; */
+    
+    /* grid-column-start: 1;
     grid-column-end: 11;
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto; */
     /* background-color: maroon; */
 }
 
@@ -138,48 +141,72 @@
 }
 
 .out-form{
-    grid-column-start: 1;
-    grid-column-end: 4;
+    /* grid-column-start: 1;
+    grid-column-end: 4; */
 }
 
 .contener_video{
-    grid-column-start: 1;
+    /* grid-column-start: 1;
     grid-column-end: 10;
     grid-row-start: auto;
-    grid-row-end: auto;
-    height: auto;
-    display: grid;
+    grid-row-end: auto; */
+    /* height: auto; */
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    margin: 0%;
+    background-color: greenyellow;
+    /* justify-content: center; */
+    /* justify-content: space-around !important; */
+    /* justify-items: center !important; */
+    /* display: grid;
     grid-template-columns: 50% 50%;
-    margin-top: 30px;
+    margin-top: 30px; */
 }
 
 
 #video_id{
     position: relative;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    margin: auto;
+
     width: auto;
+    height: auto;
+    margin: auto;
+    /* margin-bottom: 0%; */
+    padding: 0%;
     overflow-y: hidden;
+    background-color: burlywood;
+    /* justify-content: center; */
 }
 #canva_id{
     position: relative;
-    grid-column-start: 2;
-    grid-column-end: -1;
+    background-color: cadetblue;
+    /* grid-column-start: 2;
+    grid-column-end: -1; */
     width: auto;
+    height: auto;
     margin: auto;
+    padding: 0%;
+    /* justify-content: center; */
 }
 
+/* #video_id, #canva_id{
+    background-color: blueviolet;
+} */
+
 #video{
-    width: 95% !important;
-    height: 100% !important;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+    margin: 0%;
+    padding: 0%;
+    background-color:gray;
 }
 
 #canva{
-    width: 95%;
+    width: 100%;
     height: 100%;
     margin: auto;
+    padding: 0%;
+    background-color: cornsilk;
 }
 
 .btnup::before{content: "\f093";}
@@ -189,9 +216,6 @@
 
 .btncaptuerIn{
     opacity: 0.3;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    justify-self: center;
     display: none ;
     margin-left: auto;
     margin-right: auto;
@@ -209,7 +233,7 @@
 
 
 .hiddenBtn{
-    display: none !important;
+    /* display: none !important; */
 }
 
 
@@ -222,8 +246,8 @@
 
 .buttomBtn{
     margin-top: 30px;
-    grid-column-start: 1;
-    grid-column-end: 10;
+    /* grid-column-start: 1;
+    grid-column-end: 10; */
 }
 
 .rightBtn{
@@ -235,9 +259,9 @@
 }
 
 .buttomBtn .btncaptuer{
-    grid-column-start: 2;
+    /* grid-column-start: 2;
     grid-column-end: 3;
-    justify-self: center;
+    justify-self: center; */
 }
 
 .thumbnails{
@@ -247,150 +271,74 @@
 
 
 
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    .stickers{
-        height: 60px;
-    }
-
-    .stickers img{
-        width: 50px;
-        height: 50px;
+ /* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+    body{
+        background-color: hotpink;
     }
 }
-/* @media only screen and (min-width: 600px) and (max-width: 768px) */
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen  and (max-width: 768px) {
-    .form{
-        grid-column-start: 1;
-        grid-column-end: -1;
+
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    body{
+        background-color: indigo;
     }
-    .stickers{
-        grid-column-start: 1;
-        grid-column-end: 11;
+ }
+
+ /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    body{
+        background-color: lightblue;
     }
+    #video_id{
+        vertical-align: top;
+        display: inline-block;
+        justify-self: center;
+        
+
+    }
+
+    #canva_id{
+        vertical-align: top;
+        display: inline-block;
+        justify-self: center;
+        /* vertical-align: auto; */
+    }
+}
+
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    body{
+        background-color: lightgreen;
+    }
+/* 
     .control-camera{
-        grid-column-start: 3;
-        grid-column-end: 4;
-    }
-
-    .control-stickers{
-        grid-column-start: 7;
-        grid-column-end: 8;
-    }
-
-    .btncaptuer{display: none;}
-
+        display: inline-block;
+    } */
 
     #video_id{
-        grid-column-start: 1;
-        grid-column-end: 3;
-        margin: 0%;
-        width: auto;
-    }
-    #canva_id{
-        margin-top: 10px;
-        grid-column-start: 1;
-        grid-column-end: 3;
-    }
-
-    #video{
-        width: 100% !important;
-        height: 100% !important;
-    }
-
-    #canva{
-        width: 100%;
-        height: 100%;
-    }
-
-    .btncaptuerIn{
-        display: block;
-    }
-
-    .btncaptuer{
-        display: none;
-    }
-    .buttomBtn .leftBtn{
-        margin: auto;
-        justify-self: center;
-    }
-
-    .buttomBtn .rightBtn{
-        justify-self: center;
-        margin: auto;
-    }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-    body{
-        /* background-color: gold; */
-    }
-    .stickers{
-        grid-column-start: 1;
-        grid-column-end: 11;
-    }
-
-    .form{
-        grid-column-start: 2;
-        grid-column-end: 9;
-    }
-
-    .out-form{
-        grid-column-start: 2;
-        grid-column-end: 3;
-    }
-
-    #video_id{
-        grid-column-start: 1;
-        grid-column-end: -1;
-        justify-self: center;
-    }
-
-    #video{
-        margin-bottom: -5px;
+        vertical-align: top;
+        display: inline-block;
     }
 
     #canva_id{
-        margin-top: 10px;
-        grid-column-start: 1;
-        grid-column-end: -1;
-        justify-self: center;
-    }
-    .btncaptuerIn{
-        display: block;
-    }
-
-    .btncaptuer{
-        display: none;
-    }
-
-
-
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-    body{
-        /* background-color: coral; */
+        vertical-align: top;
+        display: inline-block;
     }
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+ /* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
     body{
-        /* background-color: cornflowerblue; */
+        background-color: khaki;
+    }
+    #video_id{
+        vertical-align: top;
+        display: inline-block;
     }
 
-    .contener_camera{
-        grid-column-start: 2;
-        grid-column-end: 10;
+    #canva_id{
+        vertical-align: top;
+        display: inline-block;
     }
-
-
-
-
-
 }
