--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -61,7 +61,7 @@
     border-style: solid;
     padding-right: 20px;
     padding-left: 20px;
-    /* width: 100%; */
+    width: 100%;
 }
 
 .form input::placeholder, .out-form::placeholder{
@@ -157,8 +157,8 @@
 @media only screen  and (max-width: 768px) {
     .form , .buttomBtn{
         /* background-color: khaki; */
-        grid-column-start: 1;
-        grid-column-end: -1;
+        /* grid-column-start: 1;
+        grid-column-end: -1; */
     }
 }
 
