--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -25,7 +25,7 @@ html, body {
     color: var(--Success);
 }
 
-.content {
+.container {
     height: auto;
     margin-top: auto;
     overflow: hidden;
@@ -48,6 +48,7 @@ html, body {
     text-shadow: -4px 2px 3px var(--shadow2);
     font-weight: bold;
     color: var(--ColorMainFont);
+    font-size: 35px;
 }
 
 .navHidden{
@@ -88,18 +89,20 @@ html, body {
     border-radius: 50%;
     width: 60px;
     height: 60px;
+    margin: auto;
+    padding: 0%;
 }
 
-.footer{
+.card-footer{
     position: fixed;
     height: 2rem;
     bottom:  0%;
     width: 100%;
-    background-color: var(--headerColor);
-    box-shadow: 0px 0px 20px var(--shadow);
+    /* background-color: var(--headerColor); */
+    /* box-shadow: 0px 0px 20px var(--shadow); */
 }
 
-.footer p{
+.card-footer p{
     font-weight: bold;
     float: right;
     position: relative;
