--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -11,14 +11,11 @@
     transform: translateX(110%);
     background-color: var(--menuColor);
     transition: all 0.4s;
-    border-radius: 20px 0 0 20px;
+    border-radius: 20px 0 0 20px !important;
     -webkit-border-radius: 20px 0 0 20px;
     -moz-border-radius: 20px 0 0 20px;
     box-shadow: 0px 0px 20px var(--shadow);
     z-index: 2;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto auto auto;
     overflow-x: hidden;
 }
 
@@ -26,14 +23,15 @@
   
   transform: translateX(100%);
   text-align: left;
-  font-size: 28px;
+  font-size: 20px;
   font-weight:bold;
   cursor: pointer;
-  height: 60%;
-  margin-top: auto;
-  margin-bottom: auto;
-  display: grid;
-  grid-template-columns: auto;
+  padding: auto;
+  margin: auto;
+  /* margin-top: 5px;
+  margin-bottom: 5px; */
+  width: 90%;
+  border: none;
 }
     
   
@@ -46,6 +44,7 @@
   height: 100%;
   z-index: 1;
   opacity: 0;
+  margin: auto;
   transition: all 0.3s;
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -55,13 +54,12 @@
   border-bottom-color: var(--brdColor);
   transform: scale(0.1, 1);
 }
-.list li p{
-  width: 100%;
+/* .list li{
   margin-top: auto;
   margin-bottom: auto;
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
+  display: block;
+  border: none;
+} */
 
   
 
@@ -72,43 +70,52 @@
   opacity: 1;
   transform: scale(1.2, 1); 
 }
-.list li p::after {
+.list li::after{
+  /* content: 'kdjj'; */
+  /* width: 100%; */
+  /* position: absolute; */
+  /* left: 10%; */
+  /* justify-self: end; */
+  /* justify-content: end; */
+  opacity: 0.5;
   transition: all 0.3s;
   position: relative;
+  /* display: inline; */
   float: right;
-  padding-right: 50px;
+  /* padding-right: 50px; */
 }
 
 
-.list #li_camera p::after{font-family: "FontAwesome"; content: '\f030';}
-.list #li_profile p::after{font-family: "FontAwesome"; content: '\f2bd';}
-.list #li_home p::after{font-family: "Font Awesome 5 Free"; content: '\f015';}
-.list #li_settings p::after{font-family: "FontAwesome"; content: '\f085';}
-.list #li_logout p::after{font-family: "Font Awesome 5 Free"; content: '\f2f5';}
+.list .li_camera::after{font-family: "FontAwesome"; content: '\f030';}
+.list .li_profile::after{font-family: "FontAwesome"; content: '\f2bd';}
+.list .li_home::after{font-family: "Font Awesome 5 Free"; content: '\f015';}
+.list .li_settings::after{font-family: "FontAwesome"; content: '\f085';}
+.list .li_logout::after{font-family: "Font Awesome 5 Free"; content: '\f2f5';}
 
-.list #li_camera{
-  grid-row-start: 1;
-  grid-row-end: 2;
+.list .li_camera{
+  /* background-color: aqua; */
+  /* grid-row-start: 1;
+  grid-row-end: 2; */
 }
 
 .list #li_profile{
-  grid-row-start: 2;
-  grid-row-end: 3;
+  /* grid-row-start: 2;
+  grid-row-end: 3; */
 }
 
 .list #li_home{
-  grid-row-start: 3;
-  grid-row-end: 4;
+  /* grid-row-start: 3;
+  grid-row-end: 4; */
 }
 
 .list #li_settings{
-  grid-row-start: 4;
-  grid-row-end: 5;
+  /* grid-row-start: 4;
+  grid-row-end: 5; */
 }
 
 .list #li_logout{
-  grid-row-start: 5;
-  grid-row-end: 6;
+  /* grid-row-start: 5;
+  grid-row-end: 6; */
 }
   
 
@@ -128,7 +135,7 @@
 
 }
 
-@media (pointer:none), (pointer:coarse) {
+/* @media (pointer:none), (pointer:coarse) {
   .img {
     height: 85px;
     width: 85px;
@@ -136,7 +143,7 @@
   .list{
     top:110px;
   }
-}
+} */
 
 
 
