--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -123,7 +123,7 @@
 
 
 .contener_camera{
-    background-color: brown;
+    /* background-color: brown; */
     /* justify-content: center; */
     /* justify-content: center; */
     /* justify-content: space-around !important; */
@@ -146,26 +146,14 @@
 }
 
 .contener_video{
-    /* grid-column-start: 1;
-    grid-column-end: 10;
-    grid-row-start: auto;
-    grid-row-end: auto; */
-    /* height: auto; */
     width: 100%;
     height: 100%;
     padding: 0%;
     margin: 0%;
-    background-color: greenyellow;
-    /* justify-content: center; */
-    /* justify-content: space-around !important; */
-    /* justify-items: center !important; */
-    /* display: grid;
-    grid-template-columns: 50% 50%;
-    margin-top: 30px; */
 }
 
 
-#video_id{
+#video_id, #canva_id{
     position: relative;
 
     width: auto;
@@ -173,41 +161,42 @@
     margin: auto;
     /* margin-bottom: 0%; */
     padding: 0%;
-    overflow-y: hidden;
-    background-color: burlywood;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px var(--shadow);
+
     /* justify-content: center; */
 }
-#canva_id{
+/* #canva_id{
     position: relative;
-    background-color: cadetblue;
-    /* grid-column-start: 2;
-    grid-column-end: -1; */
     width: auto;
     height: auto;
     margin: auto;
     padding: 0%;
-    /* justify-content: center; */
-}
+    overflow: hidden;
+} */
 
 /* #video_id, #canva_id{
     background-color: blueviolet;
 } */
 
-#video{
+#video, #canva{
     width: 100%;
     height: 100%;
     margin: 0%;
     padding: 0%;
-    background-color:gray;
+    /* box-shadow: 0px 0px 10px var(--shadow); */
+
+
 }
 
-#canva{
+/* #canva{
     width: 100%;
     height: 100%;
     margin: auto;
     padding: 0%;
-    background-color: cornsilk;
-}
+} */
+
 
 .btnup::before{content: "\f093";}
 .btncaptuer::before{content: "\f030";}
@@ -215,12 +204,12 @@
 .btnShr::before{content: "\f14d";}
 
 .btncaptuerIn{
-    opacity: 0.3;
-    display: none ;
+    opacity: 0.5;
+    display: none;
     margin-left: auto;
     margin-right: auto;
     top: -62px;
-    margin-bottom: -50px;
+    margin-bottom: -62px;
 }
 
 .btncaptuerIn{
@@ -233,7 +222,7 @@
 
 
 .hiddenBtn{
-    /* display: none !important; */
+    display: none !important;
 }
 
 
@@ -246,12 +235,17 @@
 
 .buttomBtn{
     margin-top: 30px;
+    /* background-color: blue; */
     /* grid-column-start: 1;
     grid-column-end: 10; */
 }
 
 .rightBtn{
     margin-right: 10px;
+    /* justify-items: end; */
+    /* justify-self: end; */
+    /* float: right; */
+    /* left: 50%; */
 }
 
 .leftBtn{
@@ -265,80 +259,70 @@
 }
 
 .thumbnails{
-    grid-column-start: 1;
-    grid-column-end: 11;
+    /* grid-column-start: 1;
+    grid-column-end: 11; */
 }
 
 
 
  /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    body{
-        background-color: hotpink;
-    }
+    .btncaptuer{display: none;}
+    .btncaptuerIn{display: block;}
+
 }
 
  /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
-    body{
-        background-color: indigo;
-    }
+    .btncaptuer{display: none;}
+    .btncaptuerIn{display: block;}
+
  }
 
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
-    body{
-        background-color: lightblue;
-    }
-    #video_id{
-        vertical-align: top;
+    /* #video_id, #canva_id{
+        vertical-align: middle;
         display: inline-block;
         justify-self: center;
-        
+        margin: 5px auto 5px auto;
 
-    }
 
-    #canva_id{
-        vertical-align: top;
-        display: inline-block;
-        justify-self: center;
-        /* vertical-align: auto; */
-    }
+    } */
+
+    .btncaptuer{display: none;}
+    .btncaptuerIn{display: block;}
 }
 
  /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-    body{
-        background-color: lightgreen;
-    }
 /* 
     .control-camera{
         display: inline-block;
     } */
 
-    #video_id{
+    #video_id, #canva_id{
         vertical-align: top;
         display: inline-block;
-    }
+        margin: 10px auto 10px auto;
 
-    #canva_id{
-        vertical-align: top;
-        display: inline-block;
     }
+    .btncaptuer{display: block;}
+    .btncaptuerIn{display: none;}
 }
 
  /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-    body{
-        background-color: khaki;
-    }
-    #video_id{
+    #video_id, #canva_id{
         vertical-align: top;
         display: inline-block;
+        margin: 10px auto 10px auto;
     }
+    .btncaptuer{display: block;}
+    .btncaptuerIn{display: none;}
 
-    #canva_id{
+    /* #canva_id{
         vertical-align: top;
         display: inline-block;
-    }
+    } */
 }
