--- a/app/view/css/btns.css
+++ b/app/view/css/btns.css
@@ -20,6 +20,7 @@
   overflow: hidden;
   box-shadow: 0px 0px 20px var(--shadow);
   position: relative;
+  max-width: 200px;
 }
 .Btn::before{
   font-family: "FontAwesome";
@@ -62,10 +63,7 @@
 
 .leftBtn {
   margin-left: 10px;
-  /* justify-self: start;
-  justify-content: left; */
-  /* position: absolute;
-  float: left; */
+
   }
 
 .centerBtn {
@@ -125,40 +123,4 @@
   }
   /* .buttomBtn{width: 94%; margin-left: 3%;}
   .buttomBtn{height: 70px; margin-top: 40px;} */
-}
-
-
-
-
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-
-}
-/* @media only screen and (min-width: 600px) and (max-width: 768px) */
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen  and (max-width: 768px) {
-  
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  body{
-      /* background-color: gold; */
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1200) {
-  body{
-      /* background-color: coral; */
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  body{
-      /* background-color: cornflowerblue; */
-  }
-
 }
