--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -123,17 +123,7 @@
 
 
 .contener_camera{
-    /* background-color: brown; */
-    /* justify-content: center; */
-    /* justify-content: center; */
-    /* justify-content: space-around !important; */
-    
-    /* grid-column-start: 1;
-    grid-column-end: 11;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    grid-template-rows: auto auto; */
-    /* background-color: maroon; */
+
 }
 
 .form{
@@ -164,7 +154,7 @@
     overflow: hidden;
     border-radius: 6px;
     box-shadow: 0px 0px 10px var(--shadow);
-
+    /* max-width: ; */
     /* justify-content: center; */
 }
 /* #canva_id{
@@ -181,6 +171,9 @@
 } */
 
 #video, #canva{
+    /* width: 500px;
+    height: 500px; */
+    /* display: block; */
     width: 100%;
     height: 100%;
     margin: 0%;
