--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -17,6 +17,8 @@ html, body {
     font-style: oblique;
 }
 
+.hidden{display: none;}
+
 .error{
     color: var(--Error);
 }
@@ -25,11 +27,11 @@ html, body {
     color: var(--Success);
 }
 
-.container {
+.page {
     height: auto;
     margin-top: auto;
     overflow: hidden;
-    padding-top: 1rem;
+    padding-top: 6rem;
     margin-bottom: 40px;
     
 }
@@ -42,6 +44,8 @@ html, body {
     box-shadow: 0px 0px 20px var(--shadow);
     z-index: 4;
     transition: all 0.5s;
+    width: 100%;
+    position: fixed;
 }
 
 .navBar h1{
